--- a/ViewSample/app/src/main/res/values/strings.xml
+++ b/ViewSample/app/src/main/res/values/strings.xml
@@ -15,4 +15,18 @@
         <item>シーフードカレー</item>
         <item>グリーンカレー</item>
     </string-array>
+
+    <string-array name="lv_cocktaillist">
+        <item>ホワイトレデイ</item>
+        <item>バラライカ</item>
+        <item>XYZ</item>
+        <item>ニューヨーク</item>
+        <item>マンハッタン</item>
+        <item>ミシシッピミュール</item>
+        <item>ブルーハワイ</item>
+        <item>マイタイ</item>
+        <item>マテイーニ</item>
+        <item>ブルームーン</item>
+        <item>モヒート</item>
+    </string-array>
 </resources>
